Hope it's okay for now..

-------------------------------------------------------------------------------

Sat Jul 29 19:23:46 PDT 2000
(KainX)

Added a randomizing function to E-Slides.

-------------------------------------------------------------------------------

Tue Aug  1 19:19:35 PDT 2000
(KainX)

Made E-Toolbox's action string checking a little friendlier.

-------------------------------------------------------------------------------

Wed Aug  2 19:13:31 PDT 2000
(KainX)

I'm an old xload fan, and none of the CPU meters actually measure load
averages.  So I wrote E-LoadMeter.  It displays the 1/5/15-minute load figures
as well as a vertical bar for each.

-------------------------------------------------------------------------------

Sat Oct 13 13:01:05 PDT 2001
(KainX)

Fixed the spec file, and hopefully fixed E-Power's insane respawning
habits.

-------------------------------------------------------------------------------

Sun Oct 14 11:13:21 PDT 2001
(KainX)

Added the ability to specify a timezone for E-Time.

-------------------------------------------------------------------------------

Tue Jun  4 15:48:53 EDT 2002
(KainX)

Updated E-Disk to display throughput in bytes, kB, MB, or GB instead of just
kB.

Added a new epplet, E-Bandwidth, which does network usage in a manner similar
to E-Disk.

-------------------------------------------------------------------------------

Thu Jun 27 14:30:48 EDT 2002
(KainX)

Applied patch from Peter Werner <peterw@ifost.org.au> for OpenBSD support.

-------------------------------------------------------------------------------

Sun Apr  6 22:37:50 EDT 2003
(KainX)

Applied patch from Kim Woelders <kim@woelders.dk> to support new WM hints.

-------------------------------------------------------------------------------

Tue Jul 29 22:20:38 EDT 2003
(KainX)

Applied patch from Kim Woelders <kim@woelders.dk> for various build fixes.

-------------------------------------------------------------------------------