@@ -2286,3 +2286,11 @@ Tue Jul 29 22:20:38 EDT 2003
 Applied patch from Kim Woelders <kim@woelders.dk> for various build fixes.
 
 -------------------------------------------------------------------------------
+
+Mon Aug 25 12:03:45 EDT 2003
+(KainX)
+
+Added E-Wireless, requested by Matt Hyclak.
+
+-------------------------------------------------------------------------------
+
